--- a/demo-shop/package.json
+++ b/demo-shop/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "lucide-react": "^0.294.0",
     "next": "^14.0.4",
+    "payload": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.1",
