--- a/demo-shop/package.json
+++ b/demo-shop/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,10 +14,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lucide-react": "^0.294.0",
     "next": "^14.0.4",
+    "nodemon": "^3.0.2",
     "payload": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
