--- a/demo-shop/package.json
+++ b/demo-shop/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lucide-react": "^0.294.0",
+    "mongodb": "^6.3.0",
     "next": "^14.0.4",
     "nodemon": "^3.0.2",
     "payload": "^2.4.0",
