--- a/demo-shop/src/.env
+++ b/demo-shop/src/.env
@@ -1,2 +1,2 @@
 PAYLOAD_SECRET = mysecret
-MONGODB_URL = mongodb+srv://ikramicono:<password>@mydb.8zhr7b9.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://ikramicono:popkornkl@mydb.8zhr7b9.mongodb.net/?retryWrites=true&w=majority
