--- a/demo-shop/package.json
+++ b/demo-shop/package.json
@@ -28,6 +28,7 @@
     "payload": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-number-format": "^5.3.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
