--- a/demo-shop/package.json
+++ b/demo-shop/package.json
@@ -30,8 +30,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-number-format": "^5.3.1",
+    "sonner": "^1.2.4",
     "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
