--- a/demo-shop/package.json
+++ b/demo-shop/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@payloadcms/bundler-webpack": "^1.0.5",
     "@payloadcms/db-mongodb": "^1.1.0",
     "@payloadcms/richtext-slate": "^1.3.1",
