--- a/demo-shop/package.json
+++ b/demo-shop/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
     "build": "next build",
-    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts generate types",
+    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
     "start": "next start",
     "lint": "next lint"
   },
