--- a/demo-shop/src/.env
+++ b/demo-shop/src/.env
@@ -1,2 +1,3 @@
 PAYLOAD_SECRET = mysecret
 MONGODB_URL = mongodb+srv://ikramicono:popkornkl@mydb.8zhr7b9.mongodb.net/?retryWrites=true&w=majority
+RESEND_API_KEY = re_SkXBMQEj_GsjmkqffCTjCq9HGaaLy3PBa
