--- a/demo-shop/package.json
+++ b/demo-shop/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.294.0",
     "mongodb": "^6.3.0",
     "next": "^14.0.4",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "payload": "^2.4.0",
     "react": "^18.2.0",
